--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,25 @@
     <title>폐의약품 수거함</title>
 </head>
 <body>
-    <h1>폐의약품 수거함 위치 서비스</h1>
 
-    <h2>수거함 목록</h2>
-    <ul>
-        {% for box in boxes %}
-            <li>
-                {{ box.name }} - {{ box.address }}
-                <a href="/delete/{{ box.id }}">삭제</a>
-            </li>
-        {% endfor %}
-    </ul>
+<h1>폐의약품 수거함 검색</h1>
 
-    <h2>수거함 추가</h2>
-    <form method="post" action="/add">
-        <input name="name" placeholder="수거함 이름">
-        <input name="address" placeholder="주소">
-        <button type="submit">추가</button>
-    </form>
+<form method="get">
+    <input name="district" placeholder="관할 (예: 중구)">
+    <input name="address" placeholder="소재지">
+    <button type="submit">검색</button>
+</form>
+
+<hr>
+
+<ul>
+{% for box in boxes %}
+    <li>
+        [{{ box.district }}] {{ box.name }}<br>
+        {{ box.address }} ({{ box.detail }})
+    </li>
+{% endfor %}
+</ul>
+
 </body>
 </html>
