관리자 생성 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,3 +27,12 @@
 
 </body>
 </html>
+
+<h2>관리자: 수거함 추가</h2>
+<form method="post" action="/add">
+    <input name="district" placeholder="관할">
+    <input name="name" placeholder="기관명">
+    <input name="address" placeholder="소재지">
+    <input name="detail" placeholder="세부위치">
+    <button type="submit">추가</button>
+</form>
